--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/lilaconlee/drunk-tweet#readme",
   "dependencies": {
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "node-env-file": "^0.1.7",
+    "twitter": "^1.2.5"
   }
 }
