--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.13.3",
     "node-env-file": "^0.1.7",
-    "twitter": "^1.2.5"
+    "twitter": "^1.2.5",
+    "socketio": "1.3.7"
   }
 }
